--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background: #f5f5f5;
+            background: #d7ffd2;
             padding: 20px;
         }
         .container {
@@ -17,7 +17,7 @@
             background: white;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(59, 128, 76, 0.884);
         }
         input, button {
             width: 100%;
@@ -26,13 +26,13 @@
             font-size: 16px;
         }
         button {
-            background: #3498db;
+            background: #24802ce0;
             color: white;
             border: none;
             cursor: pointer;
         }
         button:hover {
-            background: #2980b9;
+            background: #093a15;
         }
         .resultados {
             display: none;
