--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             box-shadow: 0 0 10px rgba(59, 128, 76, 0.884);
         }
         input, button {
-            width: 100%;
+            width: 50%;
             padding: 10px;
             margin: 10px 0;
             font-size: 16px;
@@ -37,6 +37,9 @@
         .resultados {
             display: none;
             margin-top: 20px;
+            background-color: #d7ffd2;
+            padding: 15px;
+            border-radius: 8px;
         }
     </style>
 </head>
